log/build_2024-11-08_14-55-40/first_pkg_py/stdout_stderr.log
running egg_info
writing ../../build/first_pkg_py/first_pkg_py.egg-info/PKG-INFO
writing dependency_links to ../../build/first_pkg_py/first_pkg_py.egg-info/dependency_links.txt
writing entry points to ../../build/first_pkg_py/first_pkg_py.egg-info/entry_points.txt
writing requirements to ../../build/first_pkg_py/first_pkg_py.egg-info/requires.txt
writing top-level names to ../../build/first_pkg_py/first_pkg_py.egg-info/top_level.txt
reading manifest file '../../build/first_pkg_py/first_pkg_py.egg-info/SOURCES.txt'
writing manifest file '../../build/first_pkg_py/first_pkg_py.egg-info/SOURCES.txt'
running build
running build_py
copying first_pkg_py/first_node.py -> /home/kayttaja/own_package_ws/build/first_pkg_py/build/lib/first_pkg_py
creating /home/kayttaja/own_package_ws/build/first_pkg_py/build/lib/scripts
copying scripts/__init__.py -> /home/kayttaja/own_package_ws/build/first_pkg_py/build/lib/scripts
running install
running install_lib
copying /home/kayttaja/own_package_ws/build/first_pkg_py/build/lib/first_pkg_py/first_node.py -> /home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/first_pkg_py
creating /home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/scripts
copying /home/kayttaja/own_package_ws/build/first_pkg_py/build/lib/scripts/__init__.py -> /home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/scripts
byte-compiling /home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/first_pkg_py/first_node.py to first_node.cpython-310.pyc
byte-compiling /home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/scripts/__init__.py to __init__.cpython-310.pyc
  File "/home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/first_pkg_py/first_node.py", line 5
    from 
         ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/first_pkg_py-0.0.1-py3.10.egg-info' (and everything under it)
Copying ../../build/first_pkg_py/first_pkg_py.egg-info to /home/kayttaja/own_package_ws/install/first_pkg_py/lib/python3.10/site-packages/first_pkg_py-0.0.1-py3.10.egg-info
running install_scripts
Installing first_node script to /home/kayttaja/own_package_ws/install/first_pkg_py/lib/first_pkg_py
writing list of installed files to '/home/kayttaja/own_package_ws/build/first_pkg_py/install.log'
